--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,90 +1,185 @@
-* {
-    padding: 0;
-    margin: 0;
-    font-family: 'piedra', serif;
-    box-sizing: border-box;
+body {
+  margin: 0;
+  font-family: "Lucida Grande";
 }
-header { 
-    height: 90px;
-    width: 100%;
-    background-color: rgb(0,130,150);
-    position :fixed;
-    top: 0;
-    z-index: 10;
-    cursor: pointer;
+
+a {
+  text-decoration: none;
 }
-.img {
-    float: left;
-    
-}
-header img {
-    display: inline-block;
-    width: 200px;
-    height: 90px;
-    
-}
-header ul {
-    float: right;
-}
-header ul li {
-    display: inline-block;
-    padding: 20px 20px;
-    margin-top: 10px;
-    font-size: 18px;
-    }
-header ul li:hover {
-    color: coral;
-}
-header ul li a{
-    transition: 0.6s;
-}
+
 .container {
-    width: 100%;
-    margin: 0 auto
-}
-.container::after {
-    content: '';
-    display: block;
-    clear: both;
+  width: 1170px;
+  padding: 0 15px;
+  margin: 0 auto;
 }
 
-/* menu bisa muncul dan hilang bila di minimize*/
-.mobile-menu {
-    float: right;
-    display: none;
-    padding: 18px;
+.top-wrapper {
+  padding: 180px 0 100px 0;
+  background-image: url(https://prog-8.com/images/html/advanced/top_en.png);
+  background-size: cover;
+  color: white;
+  text-align: center;
 }
 
-.mobile-menu:hover {
-   cursor: pointer;
+.top-wrapper h1 {
+  opacity: 0.7;
+  font-size: 45px;
+  letter-spacing: 5px;
+  margin-bottom: 10px;
 }
 
-#check {
-    display: none;
+.top-wrapper p {
+  opacity: 0.7;
+  margin-bottom: 3px;
 }
-/* css sidebar*/
-.sidebar {
-    position: fixed;
-    top: 90px;
-    bottom: 0;
-    left: -300px;
-    width: 200px;
-    background-color: rgba(16,47,80);
-    opacity: 0.9;
-    transition: 0.3s;
+
+.btn-wrapper {
+  margin: 20px 0;
 }
-.sidebar ul li{
-    color: cornsilk;
-    cursor: pointer;
+
+.btn-wrapper p {
+  margin: 10px 0;
 }
-.sidebar ul li {
-    padding:20px;
+
+.signup {
+  background-color: #239b76;
 }
-.sidebar ul li:hover {
-    background-color: cyan;
-    transition: 0.6s;
-    color: black;
+
+.facebook {
+  background-color: #3b5998;
+  margin-right: 10px;
 }
-#check:checked ~ .sidebar {
-    left: 0;
+
+.twitter {
+  background-color: #55acee;
+}
+
+.btn {
+  padding: 12px 24px;
+  color: white;
+  display: inline-block;
+  opacity: 0.8;
+  border-radius: 4px;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+
+.fa {
+  margin-right: 5px;
+}
+
+header {
+  height: 65px;
+  width: 100%;
+  background-color: rgba(34, 49, 52, 0.9);
+  /* Ubah position ke fixed, dan top ke 0 */
+  position: fixed;
+  top: 0;
+  /* Ubah z-index ke 10 */
+  z-index: 10;
+}
+
+.logo {
+  width: 124px;
+  margin-top: 20px;
+}
+
+.header-left {
+  float: left;
+}
+
+.header-right {
+  float: right;
+  background-color: rgba(255, 255, 255, 0.3);
+  transition: all 0.5s;
+}
+
+.header-right:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.header-right a {
+  line-height: 65px;
+  padding: 0 25px;
+  color: white;
+  display: block;
+}
+
+.lesson-wrapper {
+  height: 500px;
+  padding-bottom: 80px;
+  background-color: #f7f7f7;
+  text-align: center;
+}
+
+.heading {
+  padding-top: 60px;
+  padding-bottom: 30px;
+  color: #5f5d60;
+}
+
+.heading h2 {
+  font-weight: normal;
+}
+
+.lesson {
+  float: left;
+  width: 25%;
+}
+
+.lesson-icon {
+  position: relative;
+}
+
+.lesson-icon p {
+  position: absolute;
+  top: 90px;
+  width: 100%;
+  color: white;
+}
+
+.txt-contents {
+  width: 80%;
+  display: inline-block;
+  margin-top: 20px;
+  font-size: 15px;
+  color: #b3aeb5;
+}
+
+.heading h3 {
+  font-weight: normal;
+}
+
+.message-wrapper {
+  border-bottom: 1px solid #eee;
+  padding-bottom: 80px;
+  text-align: center;
+}
+
+.message {
+  padding: 15px 40px;
+  background-color: #5dca88;
+  cursor: pointer;
+  box-shadow: 0 7px #1a7940;
+}
+
+.message:active {
+  position: relative;
+  top: 7px;
+  box-shadow: none;
+}
+
+footer img {
+  width: 125px;
+}
+
+footer p {
+  color: #b3aeb5;
+  font-size: 12px;
+}
+
+footer {
+  padding-top: 30px;
 }
