--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,7 @@
     font-family: 'piedra', serif;
     box-sizing: border-box;
 }
+
 header { 
     height: 90px;
     width: 100%;
@@ -12,31 +13,37 @@ header {
     top: 0;
     z-index: 10;
 }
+
 .img {
     float: left;
-    
 }
+
 header img {
     display: inline-block;
     width: 200px;
     height: 90px;
     
 }
+
 header ul {
     float: right;
 }
+
 header ul li {
     display: inline-block;
     padding: 20px 20px;
     margin-top: 10px;
     font-size: 18px;
     }
+
 header ul li:hover {
     color: coral;
 }
+
 header ul li a{
     transition: 0.6s;
 }
+
 .container {
     width: 100%;
     margin: 0 auto
@@ -61,6 +68,7 @@ header ul li a{
 #check {
     display: none;
 }
+
 /* css sidebar*/
 .sidebar {
     position: fixed;
@@ -86,9 +94,11 @@ header ul li a{
 #check:checked ~ .sidebar {
     left: 0;
 }
+
 /*main*/
+
 .container {
-  width: 1170px;
+  width: 0;
   padding: 0 15px;
   margin: 0 auto;
 }
