--- a/stylesheet.css
+++ b/stylesheet.css
@@ -98,14 +98,14 @@ header ul li a{
 /*main*/
 
 .container {
-  width: 0;
-  padding: 0 15px;
+  width: 1170;
+  padding: 0 auto;
   margin: 0 auto;
 }
 
 .top-wrapper {
-  padding: 180px 0 100px 0;
-  background-image: url(https://prog-8.com/images/html/advanced/top_en.png);
+  padding: 110px 0 100px 0;
+  background-image: url(progategrupc27.github-io/background-banner.jpg);
   background-size: cover;
   color: white;
   text-align: center;
@@ -129,35 +129,6 @@ header ul li a{
 
 .btn-wrapper p {
   margin: 10px 0;
-}
-
-.signup {
-  background-color: #239b76;
-}
-
-.facebook {
-  background-color: #3b5998;
-  margin-right: 10px;
-}
-
-.twitter {
-  background-color: #55acee;
-}
-
-.btn {
-  padding: 12px 24px;
-  color: white;
-  display: inline-block;
-  opacity: 0.8;
-  border-radius: 4px;
-}
-
-.btn:hover {
-  opacity: 1;
-}
-
-.fa {
-  margin-right: 5px;
 }
 
 .lesson-wrapper {
